<!--
  ~ /*
  ~    * Copyright 2014 Basit Parkar.
  ~    *
  ~    * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  ~    * use this file except in compliance with the License. You may obtain a copy of
  ~    * the License at
  ~    *
  ~    * http://www.apache.org/licenses/LICENSE-2.0
  ~    *
  ~    * Unless required by applicable law or agreed to in writing, software
  ~    * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~    * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~    * License for the specific language governing permissions and limitations under
  ~    * the License.
  ~    *
  ~    * @date 7/7/14 1:02 PM
  ~    * @modified 7/7/14 12:57 PM
  ~    */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <customview.FloatingLabelSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_margin"
            app:floatLabelTextAppearance="@style/TextAppearance.CustomView.FloatLabel"
            >

            <Spinner
                android:id="@+id/spUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/user"
                android:singleLine="true"
                />
        </customview.FloatingLabelSpinner>

        <customview.FloatingLabelLayout
            android:id="@+id/flPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_margin"
            app:floatLabelTextAppearance="@style/TextAppearance.CustomView.FloatLabel">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="10"
                android:singleLine="true"
                />
        </customview.FloatingLabelLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/grey_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin2x"
            android:text="@string/login"/>


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        />
</RelativeLayout>
