<!--
  ~ /*
  ~    * Copyright 2014 Basit Parkar.
  ~    *
  ~    * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  ~    * use this file except in compliance with the License. You may obtain a copy of
  ~    * the License at
  ~    *
  ~    * http://www.apache.org/licenses/LICENSE-2.0
  ~    *
  ~    * Unless required by applicable law or agreed to in writing, software
  ~    * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~    * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~    * License for the specific language governing permissions and limitations under
  ~    * the License.
  ~    *
  ~    * @date 7/7/14 1:02 PM
  ~    * @modified 7/7/14 12:57 PM
  ~    */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">


    <customview.FloatingLabelSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_margin"
        app:floatLabelTextAppearance="@style/TextAppearance.CustomView.FloatLabel"
        >

        <Spinner
            android:id="@+id/spUserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/username"
            android:singleLine="true"
            />
    </customview.FloatingLabelSpinner>


    <com.dd.CircularProgressButton
        android:id="@+id/btnWithIcons1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="48dp"
        app:iconComplete="@drawable/ic_action_accept"
        app:iconError="@drawable/ic_action_cancel"
        app:textIdle="@string/req_status"/>

    <TextView
        android:id="@+id/tvBatteryStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/logoMargin"
        android:text="@string/battery_status"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_light"/>

</LinearLayout>
